fix: ordering in crafting preview
Use PreviewBuilder internally
Add to-craft resource when child calculation
starts instead of at the end of the
child calculation.